[tool.poetry]
name = "test-grayskull"
version = "0.0.1"
description = ""
authors = ["d33bs <dave.bunten@cuanschutz.edu>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "src/test_grayskull"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
